[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.4.0"

axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

# Others
lazy-regex = "3.1"
async-trait = "0.1.77"
strum_macros = "0.25.3"
uuid = { version = "1.6.1", features = ["v4", "fast-rng","macro-diagnostics"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"